# vicaran

./: .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  SETUP.md  example_query.md  package.json  shipkit.json
ai_docs/ADK sessions/: raw-sessions.md  session-508ba968-53db-4e72-921f-957c581e4217.json  session-9e040b0f-8cf2-41c0-b350-ab8074dae935.json  session-d9afded2-9f09-4bd4-98aa-8dfd98969dd9.json
ai_docs/dev_templates/: task_review.md  worktree.md
ai_docs/prep/: app_name.md  app_pages_and_functionality.md  edge_cases_and_behaviors.md  initial_data_schema.md  logo.md  master_idea.md  roadmap.md  system_architecture.md  ui_theme.md  vicaran_investigation_workflow.md  wireframe.md
ai_docs/tasks/: 001_phase3_database_callback_api.md  002_fix_callback_api_routing.md  003_phase5_home_investigation_setup.md  004_fix_adk_pgbouncer_issue.md  004_session_state_accumulation.md  bias_analyzer_code_review.md  claim_extractor_code_review.md  fact_checker_code_review.md  fix_agent_not_triggered.md  (+13 more)
apps/competitor-analysis-agent/: README.md  pyproject.toml
apps/competitor-analysis-agent/competitor_analysis_agent/: __init__.py  agent.py  models.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/: __init__.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/enhanced_search_executor/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/escalation_checker/: agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/iterative_refinement_loop/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/plan_generator/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/report_composer/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/research_evaluator/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/research_pipeline/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/section_planner/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/sub_agents/section_researcher/: __init__.py  agent.py
apps/competitor-analysis-agent/competitor_analysis_agent/tools/: __init__.py  data_processing_tools.py
apps/competitor-analysis-agent/competitor_analysis_agent/utils/: __init__.py  callbacks.py  gcs.py  typing.py
(+178 files in other folders)
